Fixed hover problem on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -33,3 +33,8 @@
     width: 100%;
     z-index: 9998;
 }
+
+.btn:hover {
+    background-color: transparent !important;
+    border-color: #009688 !important;
+}
